<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:id="@+id/heading"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"
        android:layout_margin="25dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:text="@string/app_description"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <com.google.android.material.button.MaterialButton
    android:id="@+id/image_classification"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="152dp"
    android:gravity="center"
    android:text="@string/image_classification"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/object_detection_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:gravity="center"
        android:text="@string/object_detection_in_an_image"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/live_object_detection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:gravity="center"
        android:text="@string/live_object_detection"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>